Fixed layout problem (footer)

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -64,11 +64,6 @@ input {
 
 }
 
-
-.newblogpostpage {
-    height: 100vh;
-}
-
 .heading h3 {
     color: #636161;
     font-family: 'Raleway',sans-serif;
